--- a/login.html
+++ b/login.html
@@ -196,12 +196,12 @@
             <div class="row">
                 <div class="col-12">
                     <nav class="main-nav">
-                        <a href="index.html" class="logo">LuGx Gaming</a>
+                        <a href="index.html" class="logo">LuGx</a>
                         <ul class="nav">
-                            <li><a href="index.html">Trang Chủ</a></li>
-                            <li><a href="shop.html">Cửa hàng</a></li>
-                            <li><a href="contact.html">Liên hệ</a></li>
-                            <li><a href="login.html" class="active">Đăng nhập</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="shop.html">Shop</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="login.html" class="active">Login</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -214,20 +214,20 @@
             <div class="col-12">
                 <div class="section-heading">
                     <div class="line-dec"></div>
-                    <h1>Đăng nhập</h1>
+                    <h1>Login</h1>
                 </div>
             </div>
             <div class="col-12">
                 <form action="#" method="post">
                     <div class="row">
                         <div class="col-12">
-                            <input type="text" name="username" class="form-control" placeholder="tài khoản của bạn..." required>
+                            <input type="text" name="username" class="form-control" placeholder="Username" required>
                         </div>
                         <div class="col-12">
-                            <input type="password" name="password" class="form-control" placeholder="mật khẩu" required>
+                            <input type="password" name="password" class="form-control" placeholder="Password" required>
                         </div>
                         <div class="col-12">
-                            <button type="submit" class="main-button">Đăng nhập</button>
+                            <button type="submit" class="main-button">Login</button>
                         </div>
                     </div>
                 </form>
