--- a/login.html
+++ b/login.html
@@ -102,6 +102,8 @@
             margin: 0 auto;
         }
 
+        /* da sua */
+
         .form-control {
             width: 100%;
             padding: 15px;
@@ -137,30 +139,6 @@
             background-color: #45b393;
         }
 
-        /* Gaming-inspired decorative elements */
-        .container::before,
-        .container::after {
-            content: "";
-            position: fixed;
-            width: 50px;
-            height: 50px;
-            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%234ecca3"><path d="M21 6H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zm-10 7H8v3H6v-3H3v-2h3V8h2v3h3v2zm4.5 2c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm4-3c-.83 0-1.5-.67-1.5-1.5S18.67 9 19.5 9s1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"/></svg>');
-            background-repeat: no-repeat;
-            opacity: 0.1;
-            z-index: -1;
-        }
-
-        .container::before {
-            top: 20px;
-            left: 20px;
-        }
-
-        .container::after {
-            bottom: 20px;
-            right: 20px;
-            transform: rotate(180deg);
-        }
-
         /* Responsive adjustments */
         @media (max-width: 768px) {
             .header-area {
@@ -186,6 +164,30 @@
                 padding: 20px;
             }
         }
+
+        /* Gaming-inspired decorative elements */
+        .container::before,
+        .container::after {
+            content: "";
+            position: fixed;
+            width: 50px;
+            height: 50px;
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%234ecca3"><path d="M21 6H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zm-10 7H8v3H6v-3H3v-2h3V8h2v3h3v2zm4.5 2c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm4-3c-.83 0-1.5-.67-1.5-1.5S18.67 9 19.5 9s1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"/></svg>');
+            background-repeat: no-repeat;
+            opacity: 0.1;
+            z-index: -1;
+        }
+
+        .container::before {
+            top: 20px;
+            left: 20px;
+        }
+
+        .container::after {
+            bottom: 20px;
+            right: 20px;
+            transform: rotate(180deg);
+        }
     </style>
 </head>
 <body>
@@ -194,12 +196,12 @@
             <div class="row">
                 <div class="col-12">
                     <nav class="main-nav">
-                        <a href="index.html" class="logo">LuGx</a>
+                        <a href="index.html" class="logo">LuGx Gaming</a>
                         <ul class="nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="shop.html">Shop</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="login.html" class="active">Login</a></li>
+                            <li><a href="index.html">Trang Chủ</a></li>
+                            <li><a href="shop.html">Cửa hàng</a></li>
+                            <li><a href="contact.html">Liên hệ</a></li>
+                            <li><a href="login.html" class="active">Đăng nhập</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -212,20 +214,20 @@
             <div class="col-12">
                 <div class="section-heading">
                     <div class="line-dec"></div>
-                    <h1>Login</h1>
+                    <h1>Đăng nhập</h1>
                 </div>
             </div>
             <div class="col-12">
                 <form action="#" method="post">
                     <div class="row">
                         <div class="col-12">
-                            <input type="text" name="username" class="form-control" placeholder="Username" required>
+                            <input type="text" name="username" class="form-control" placeholder="tài khoản của bạn..." required>
                         </div>
                         <div class="col-12">
-                            <input type="password" name="password" class="form-control" placeholder="Password" required>
+                            <input type="password" name="password" class="form-control" placeholder="mật khẩu" required>
                         </div>
                         <div class="col-12">
-                            <button type="submit" class="main-button">Login</button>
+                            <button type="submit" class="main-button">Đăng nhập</button>
                         </div>
                     </div>
                 </form>
