--- a/register.html
+++ b/register.html
@@ -16,6 +16,8 @@
             padding: 0;
         }
 
+        
+
         .header-area {
             background-color: rgba(22, 33, 62, 0.8);
             padding: 20px 0;
@@ -196,11 +198,11 @@
                     <nav class="main-nav">
                         <a href="index.html" class="logo">LUGX GAMING</a>
                         <ul class="nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="shop.html">Shop</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="login.html">Login</a></li>
-                            <li><a href="register.html" class="active">Register</a></li>
+                            <li><a href="index.html">Trang chủ</a></li>
+                            <li><a href="shop.html">Cửa hàng</a></li>
+                            <li><a href="contact.html">Liên hệ</a></li>
+                            <li><a href="login.html">Đăng nhập</a></li>
+                            <li><a href="register.html" class="active">Đăng kí</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -213,26 +215,26 @@
             <div class="col-12">
                 <div class="section-heading">
                     <div class="line-dec"></div>
-                    <h1>Register</h1>
+                    <h1>Đăng kí</h1>
                 </div>
             </div>
             <div class="col-12">
                 <form action="#" method="post">
                     <div class="row">
                         <div class="col-12">
-                            <input type="text" name="username" class="form-control" placeholder="Username" required>
+                            <input type="text" name="username" class="form-control" placeholder="Tài khoản của bạn" required>
                         </div>
                         <div class="col-12">
-                            <input type="password" name="password" class="form-control" placeholder="Password" required>
+                            <input type="password" name="password" class="form-control" placeholder="Mật khẩu" required>
                         </div>
                         <div class="col-12">
-                            <input type="password" name="repassword" class="form-control" placeholder="Confirm Password" required>
+                            <input type="password" name="repassword" class="form-control" placeholder="Nhập lại mật khẩu" required>
                         </div>
                         <div class="col-12">
-                            <input type="tel" name="phone" class="form-control" placeholder="Phone Number" required>
+                            <input type="tel" name="phone" class="form-control" placeholder="Số điện thoại" required>
                         </div>
                         <div class="col-12">
-                            <button type="submit" class="main-button">Register</button>
+                            <button type="submit" class="main-button">Đăng kí</button>
                         </div>
                     </div>
                 </form>
